package builder

import (
	"context"
	"fmt"
	"math/big"

	transaction_pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo_pb "github.com/weisyn/v1/pb/blockchain/utxo"
	cryptoface "github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
)

// SponsorTools èµåŠ©UTXOå·¥å…·é›†
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼šæä¾›èµåŠ©UTXOçš„åˆ›å»ºã€æŸ¥è¯¢ã€ç®¡ç†å·¥å…·
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - æä¾›ç»Ÿä¸€çš„å·¥å…·æ¥å£ï¼Œç®€åŒ–èµåŠ©UTXOçš„ä½¿ç”¨
// - å°è£…åº•å±‚æŸ¥è¯¢å’Œæ„å»ºé€»è¾‘
// - æ”¯æŒå¤šç§é”å®šæ–¹å¼ï¼ˆDelegationLockã€ContractLockç­‰ï¼‰
type SponsorTools struct {
	eutxoQuery persistence.UTXOQuery
	helper     *SponsorUTXOHelper
	audit      *SponsorAuditService
}

// NewSponsorTools åˆ›å»ºèµåŠ©å·¥å…·é›†
func NewSponsorTools(
	eutxoQuery persistence.UTXOQuery,
	txQuery persistence.TxQuery,
	chainQuery persistence.ChainQuery,
	hashManager cryptoface.HashManager,
) *SponsorTools {
	return &SponsorTools{
		eutxoQuery: eutxoQuery,
		helper:     NewSponsorUTXOHelper(eutxoQuery),
		audit:      NewSponsorAuditService(eutxoQuery, txQuery, chainQuery, hashManager),
	}
}

// SponsorUTXOInfo èµåŠ©UTXOä¿¡æ¯
type SponsorUTXOInfo struct {
	UTXO            *utxo_pb.UTXO        // UTXOå¯¹è±¡
	Metadata        *SponsorMetadata     // å…ƒæ•°æ®
	LifecycleState  SponsorLifecycleState // ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
}

// ListSponsorUTXOs åˆ—å‡ºæ‰€æœ‰èµåŠ©UTXO
//
// **åŠŸèƒ½**ï¼š
// - æŸ¥è¯¢æ‰€æœ‰èµåŠ©æ± UTXO
// - æå–å…ƒæ•°æ®
// - è®¡ç®—ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
//
// **å‚æ•°**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - currentHeight: å½“å‰åŒºå—é«˜åº¦ï¼ˆç”¨äºè®¡ç®—è¿‡æœŸçŠ¶æ€ï¼‰
//   - onlyAvailable: æ˜¯å¦åªè¿”å›å¯ç”¨çŠ¶æ€çš„UTXO
//
// **è¿”å›**ï¼š
//   - []*SponsorUTXOInfo: èµåŠ©UTXOä¿¡æ¯åˆ—è¡¨
//   - error: æŸ¥è¯¢é”™è¯¯
func (t *SponsorTools) ListSponsorUTXOs(
	ctx context.Context,
	currentHeight uint64,
	onlyAvailable bool,
) ([]*SponsorUTXOInfo, error) {
	// 1. æŸ¥è¯¢æ‰€æœ‰èµåŠ©æ± UTXO
	utxos, err := t.eutxoQuery.GetSponsorPoolUTXOs(ctx, onlyAvailable)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢èµåŠ©æ± UTXOå¤±è´¥: %w", err)
	}

	// 2. æå–å…ƒæ•°æ®å’ŒçŠ¶æ€
	var result []*SponsorUTXOInfo
	for _, utxo := range utxos {
		// éªŒè¯æ˜¯å¦ä¸ºèµåŠ©UTXO
		if !t.helper.IsSponsorUTXO(utxo) {
			continue
		}

		// æå–å…ƒæ•°æ®
		metadata, err := t.helper.ExtractMetadata(utxo)
		if err != nil {
			continue // æå–å¤±è´¥ï¼Œè·³è¿‡
		}

		// è®¡ç®—ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
		state, err := t.helper.GetLifecycleState(ctx, utxo, currentHeight)
		if err != nil {
			state = SponsorStateUnknown // çŠ¶æ€è®¡ç®—å¤±è´¥ï¼Œæ ‡è®°ä¸ºæœªçŸ¥
		}

		result = append(result, &SponsorUTXOInfo{
			UTXO:           utxo,
			Metadata:       metadata,
			LifecycleState: state,
		})
	}

	return result, nil
}

// SponsorUTXODetail èµåŠ©UTXOè¯¦ç»†ä¿¡æ¯
type SponsorUTXODetail struct {
	Info       *SponsorUTXOInfo
	ClaimHistory []*ClaimRecord
}

// GetSponsorUTXOInfo è·å–å•ä¸ªèµåŠ©UTXOçš„è¯¦ç»†ä¿¡æ¯
//
// **åŠŸèƒ½**ï¼š
// - æŸ¥è¯¢æŒ‡å®šUTXO
// - æå–å…ƒæ•°æ®
// - è®¡ç®—ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
// - æŸ¥è¯¢é¢†å–å†å²
//
// **å‚æ•°**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - outpoint: UTXOçš„OutPoint
//   - currentHeight: å½“å‰åŒºå—é«˜åº¦
//
// **è¿”å›**ï¼š
//   - *SponsorUTXODetail: èµåŠ©UTXOè¯¦ç»†ä¿¡æ¯
//   - error: æŸ¥è¯¢é”™è¯¯
func (t *SponsorTools) GetSponsorUTXOInfo(
	ctx context.Context,
	outpoint *transaction_pb.OutPoint,
	currentHeight uint64,
) (*SponsorUTXODetail, error) {
	// 1. æŸ¥è¯¢UTXO
	utxo, err := t.eutxoQuery.GetUTXO(ctx, outpoint)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢UTXOå¤±è´¥: %w", err)
	}

	// 2. éªŒè¯æ˜¯å¦ä¸ºèµåŠ©UTXO
	if !t.helper.IsSponsorUTXO(utxo) {
		return nil, fmt.Errorf("ä¸æ˜¯èµåŠ©UTXO")
	}

	// 3. æå–å…ƒæ•°æ®
	metadata, err := t.helper.ExtractMetadata(utxo)
	if err != nil {
		return nil, fmt.Errorf("æå–å…ƒæ•°æ®å¤±è´¥: %w", err)
	}

	// 4. è®¡ç®—ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
	state, err := t.helper.GetLifecycleState(ctx, utxo, currentHeight)
	if err != nil {
		state = SponsorStateUnknown
	}

	// 5. æŸ¥è¯¢é¢†å–å†å²
	claimHistory, err := t.audit.GetSponsorClaimHistory(ctx, outpoint)
	if err != nil {
		claimHistory = []*ClaimRecord{} // æŸ¥è¯¢å¤±è´¥ï¼Œè¿”å›ç©ºåˆ—è¡¨
	}

	return &SponsorUTXODetail{
		Info: &SponsorUTXOInfo{
			UTXO:           utxo,
			Metadata:       metadata,
			LifecycleState: state,
		},
		ClaimHistory: claimHistory,
	}, nil
}

// ValidateSponsorUTXO éªŒè¯èµåŠ©UTXOæ˜¯å¦ç¬¦åˆæ ‡å‡†
//
// **åŠŸèƒ½**ï¼š
// - éªŒè¯UTXOç»“æ„
// - éªŒè¯DelegationLocké…ç½®
// - éªŒè¯é‡‘é¢å’Œä»£å¸ç±»å‹
func (t *SponsorTools) ValidateSponsorUTXO(utxo *utxo_pb.UTXO) error {
	return t.helper.ValidateSponsorUTXO(utxo)
}

// GetStatistics è·å–èµåŠ©ç»Ÿè®¡ä¿¡æ¯
//
// **åŠŸèƒ½**ï¼š
// - ç»Ÿè®¡æ€»èµåŠ©æ•°ã€æ€»é‡‘é¢ã€å·²é¢†å–é‡‘é¢ç­‰
func (t *SponsorTools) GetStatistics(ctx context.Context) (*SponsorStats, error) {
	return t.audit.GetSponsorStatistics(ctx)
}

// GetMinerClaimHistory æŸ¥è¯¢çŸ¿å·¥çš„é¢†å–å†å²
//
// **åŠŸèƒ½**ï¼š
// - æŸ¥è¯¢æŒ‡å®šçŸ¿å·¥çš„æ‰€æœ‰é¢†å–è®°å½•
func (t *SponsorTools) GetMinerClaimHistory(
	ctx context.Context,
	minerAddr []byte,
) ([]*ClaimRecord, error) {
	return t.audit.GetMinerClaimHistory(ctx, minerAddr)
}

// SponsorUTXOConfig èµåŠ©UTXOé…ç½®ï¼ˆç”¨äºåˆ›å»ºï¼‰
//
// **åŠŸèƒ½**ï¼š
// - å°è£…åˆ›å»ºèµåŠ©UTXOæ‰€éœ€çš„é…ç½®
// - æ”¯æŒå¤šç§é”å®šæ–¹å¼
type SponsorUTXOConfig struct {
	// èµ„äº§ä¿¡æ¯
	TokenType string   // ä»£å¸ç±»å‹ï¼ˆnative/contract:xxx:yyyï¼‰
	Amount    *big.Int // é‡‘é¢

	// é”å®šæ–¹å¼ï¼ˆä¸‰é€‰ä¸€ï¼‰
	UseDelegationLock bool                   // ä½¿ç”¨DelegationLockï¼ˆå½“å‰é»˜è®¤ï¼‰
	UseContractLock   bool                   // ä½¿ç”¨ContractLockï¼ˆéœ€è¦æ™ºèƒ½åˆçº¦ï¼‰
	UseHeightLock     bool                   // ä½¿ç”¨HeightLockåµŒå¥—DelegationLock

	// DelegationLocké…ç½®
	MaxValuePerOperation  uint64   // å•æ¬¡æœ€å¤§é¢†å–é‡‘é¢
	ExpiryDurationBlocks  *uint64  // è¿‡æœŸé«˜åº¦ï¼ˆå¯é€‰ï¼‰
	AllowedDelegates      [][]byte // å…è®¸çš„å§”æ‰˜åœ°å€ï¼ˆç©º=ä»»æ„çŸ¿å·¥ï¼‰

	// ContractLocké…ç½®ï¼ˆå¦‚æœä½¿ç”¨ï¼‰
	ContractAddress []byte // åˆçº¦åœ°å€
	RequiredMethod  string  // å¿…éœ€çš„æ–¹æ³•å

	// HeightLocké…ç½®ï¼ˆå¦‚æœä½¿ç”¨ï¼‰
	UnlockHeight       uint64  // è§£é”é«˜åº¦
	ConfirmationBlocks uint32  // ç¡®è®¤åŒºå—æ•°ï¼ˆå¯é€‰ï¼Œé»˜è®¤0ï¼‰
	GraceBlocks        *uint64 // å®½é™åŒºå—æ•°ï¼ˆå¯é€‰ï¼‰
	// æ³¨æ„ï¼šHeightLockæœ¬èº«æ²¡æœ‰è¿‡æœŸå­—æ®µï¼Œè¿‡æœŸé€šè¿‡DelegationLockçš„ExpiryDurationBlockså®ç°

	// å…ƒæ•°æ®ï¼ˆå¯é€‰ï¼Œå½“å‰æ— æ³•å­˜å‚¨åˆ°UTXOï¼‰
	Description string // æè¿°ä¿¡æ¯
	Purpose     string // ç›®çš„ä¿¡æ¯
}

// ValidateConfig éªŒè¯é…ç½®æœ‰æ•ˆæ€§
func (c *SponsorUTXOConfig) ValidateConfig() error {
	// 1. éªŒè¯é”å®šæ–¹å¼é€‰æ‹©
	lockCount := 0
	if c.UseDelegationLock {
		lockCount++
	}
	if c.UseContractLock {
		lockCount++
	}
	if c.UseHeightLock {
		lockCount++
	}
	if lockCount != 1 {
		return fmt.Errorf("å¿…é¡»ä¸”åªèƒ½é€‰æ‹©ä¸€ç§é”å®šæ–¹å¼")
	}

	// 2. éªŒè¯é‡‘é¢
	if c.Amount == nil || c.Amount.Sign() <= 0 {
		return fmt.Errorf("é‡‘é¢å¿…é¡»å¤§äº0")
	}

	// 3. éªŒè¯ä»£å¸ç±»å‹
	if c.TokenType == "" {
		return fmt.Errorf("ä»£å¸ç±»å‹ä¸èƒ½ä¸ºç©º")
	}

	// 4. éªŒè¯ContractLocké…ç½®ï¼ˆå¦‚æœä½¿ç”¨ï¼‰
	if c.UseContractLock {
		if len(c.ContractAddress) == 0 {
			return fmt.Errorf("ContractLockéœ€è¦åˆçº¦åœ°å€")
		}
		if c.RequiredMethod == "" {
			return fmt.Errorf("ContractLockéœ€è¦æ–¹æ³•å")
		}
	}

	// 5. éªŒè¯HeightLocké…ç½®ï¼ˆå¦‚æœä½¿ç”¨ï¼‰
	if c.UseHeightLock {
		if c.UnlockHeight == 0 {
			return fmt.Errorf("UnlockHeightå¿…é¡»å¤§äº0")
		}
		// æ³¨æ„ï¼šè¿‡æœŸé€šè¿‡DelegationLockçš„ExpiryDurationBlockså®ç°
	}

	return nil
}

// ToLockingConditions å°†é…ç½®è½¬æ¢ä¸ºLockingConditions
//
// **åŠŸèƒ½**ï¼š
// - æ ¹æ®é…ç½®ç”ŸæˆLockingConditions
// - æ”¯æŒå¤šç§é”å®šæ–¹å¼
func (c *SponsorUTXOConfig) ToLockingConditions() ([]*transaction_pb.LockingCondition, error) {
	if err := c.ValidateConfig(); err != nil {
		return nil, err
	}

	var conditions []*transaction_pb.LockingCondition

	// æ ¹æ®é€‰æ‹©çš„é”å®šæ–¹å¼ç”Ÿæˆæ¡ä»¶
	if c.UseDelegationLock {
		// DelegationLockæ–¹å¼
		delegationLock := &transaction_pb.DelegationLock{
			AuthorizedOperations: []string{"consume"},
			MaxValuePerOperation: c.MaxValuePerOperation,
			ExpiryDurationBlocks: c.ExpiryDurationBlocks,
		}
		// è½¬æ¢AllowedDelegates
		if len(c.AllowedDelegates) > 0 {
			delegationLock.AllowedDelegates = make([][]byte, len(c.AllowedDelegates))
			copy(delegationLock.AllowedDelegates, c.AllowedDelegates)
		}

		conditions = append(conditions, &transaction_pb.LockingCondition{
			Condition: &transaction_pb.LockingCondition_DelegationLock{
				DelegationLock: delegationLock,
			},
		})
	} else if c.UseContractLock {
		// ContractLockæ–¹å¼
		contractLock := &transaction_pb.ContractLock{
			ContractAddress: c.ContractAddress,
			RequiredMethod:  c.RequiredMethod,
		}

		conditions = append(conditions, &transaction_pb.LockingCondition{
			Condition: &transaction_pb.LockingCondition_ContractLock{
				ContractLock: contractLock,
			},
		})
	} else if c.UseHeightLock {
		// HeightLockåµŒå¥—DelegationLockæ–¹å¼
		delegationLock := &transaction_pb.DelegationLock{
			AuthorizedOperations: []string{"consume"},
			MaxValuePerOperation: c.MaxValuePerOperation,
			ExpiryDurationBlocks: c.ExpiryDurationBlocks, // è¿‡æœŸé€šè¿‡DelegationLockå®ç°
		}
		// è½¬æ¢AllowedDelegates
		if len(c.AllowedDelegates) > 0 {
			delegationLock.AllowedDelegates = make([][]byte, len(c.AllowedDelegates))
			copy(delegationLock.AllowedDelegates, c.AllowedDelegates)
		}

		heightLock := &transaction_pb.HeightLock{
			UnlockHeight:       c.UnlockHeight,
			ConfirmationBlocks: c.ConfirmationBlocks,
			GraceBlocks:        c.GraceBlocks,
			BaseLock: &transaction_pb.LockingCondition{
				Condition: &transaction_pb.LockingCondition_DelegationLock{
					DelegationLock: delegationLock,
				},
			},
		}

		conditions = append(conditions, &transaction_pb.LockingCondition{
			Condition: &transaction_pb.LockingCondition_HeightLock{
				HeightLock: heightLock,
			},
		})
	}

	return conditions, nil
}

